# geosite

./: .gitignore  .mcp.json  CLAUDE.md  README.md  brand-name-candidates-2.csv  brand-name-candidates.csv  uncommon-word-candidates.csv
engine/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
engine/astova_engine/: __init__.py  ai_ready.py  answerability.py  assessment.py  cli.py  compare.py  config.py  content.py  detect.py  effort.py  export.py  fetch.py  fixes.py  jsonld.py  knowledge.py  mcp_guide.py  mcp_server.py  models.py  project.py  report_export.py  reviews.py  scanner.py  scorecard.py  service.py  store.py  verify.py
engine/bench/: accuracy_bench.py
engine/damask_engine/: __init__.py  cli.py  cloudflare_logs.py  config.py  crawl.py  crawler_logs.py  fetch.py  fixes.py  mcp_server.py  models.py  monitoring.py  project.py  scanner.py  scorecard.py  scoring.py  service.py  store.py  util.py
engine/tests/: test_ai_ready_loop.py  test_answerability.py  test_answerability_review.py  test_assessment.py  test_bot_view.py  test_challenge_integration.py  test_cli.py  test_cloudflare_logs.py  test_compare.py  test_crawl.py  test_crawler_logs.py  test_detect.py  test_engine.py  test_export.py  test_fix_generation.py  test_fixes.py  test_geo.py  test_knowledge.py  test_local.py  test_mcp.py  test_mcp_guide.py  test_monitoring.py  test_onpage.py  test_performance.py  test_prepare_project.py  test_project.py  test_project_audit.py  test_render.py  test_report_export.py  test_schema.py  test_schema_review.py  test_scorecard.py  test_service.py  (+3 more)
(+147 files in other folders)
