[project]
name = "astova-engine"
version = "0.0.1"
description = "GEO/SEO scan engine — URL in, scored report out."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "httpx>=0.27"]
service = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
render = ["playwright>=1.44"]
mcp = ["mcp>=1.2"]

[project.scripts]
astova = "astova_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["astova_engine*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
